src/math_ops/snapshots/rbx_types_ops__math_ops__vec2int16__vec2int16_modulus_rect.snap
---
source: src/math_ops/vec2int16.rs
expression: "Vector2int16::new(175,\n5).modulus(&Rect::new(Vector2::new(5.0, 10.0),\nVector2::new(5.0, 10.0)).into())"
---
Rect:
  - - 0
    - 5
  - - 0
    - 5
