src/math_ops/snapshots/rbx_types_ops__math_ops__vec2int16__vec2int16_pow_f32.snap
---
source: src/math_ops/vec2int16.rs
expression: "Vector2int16::new(15, 15).pow(&5f32.into())"
---
Vector2int16:
  - 32767
  - 32767
